--- a/serial_to_ft/CMakeLists.txt
+++ b/serial_to_ft/CMakeLists.txt
@@ -16,8 +16,8 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 # # System dependencies are found with CMake's conventions
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(LIBSERIALPORT REQUIRED libserialport)
+#find_package(PkgConfig REQUIRED)
+#pkg_check_modules(LIBSERIALPORT REQUIRED libserialport)
 
 # # Uncomment this if the package has a setup.py. This macro ensures
 # # modules and global scripts declared therein get installed
